fixing failsafe background so it doesn't peek behind the video during responsive

--- a/less/style.less
+++ b/less/style.less
@@ -247,6 +247,19 @@ ul {
    margin: 10px auto;
 }
 
+
+.finance-bg {
+    background-color: #5E626A;
+}
+
+.taj-bg {
+    background-color: #EFF8FE;
+}
+
+.recommends-bg {
+    background-color: #E1E3E4;
+}
+
 .wrapper {
    padding-top: 45px;
 /*   background-color: #f2f2f2;*/
@@ -267,8 +280,8 @@ ul {
 
       .finance {
          background: url("/images/finance/finance-front.png") no-repeat center;
-         background-size: cover;
          height: 100%;
+         background-size: contain;
       }
       .charts {
          background: url("/images/charts/front-chart.png") no-repeat center;
@@ -280,7 +293,7 @@ ul {
       }
       .recommends {
          background: url("/images/recommends/recommends-front.png") no-repeat center;
-         background-size: cover;
+         background-size: contain;
          height: 100%;
          background-color: #E1E3E4;
       }
@@ -298,7 +311,7 @@ ul {
       }
       .taj-mahal {
         background: url("/images/taj-mahal/taj-mahal.png") no-repeat center;
-        background-size: cover;
+        background-size: contain;
         height: 100%;
       }
 
